tests/negative/test_fnc_redef_of_no_name_mangle.orb
fnc foo::noNameMangle (x:i32) ();
fnc foo (y:i64) ();

fnc main () () {};